--- a/Jg2i1a.html
+++ b/Jg2i1a.html
@@ -1,37 +1,61 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "11", "2) -공 찾기 초기화" ], [ "4", "1) --공 찾기 결과 출력" ], [ "7", "1) --폭탄 피하기" ], [ "12", "2) -공 숨기기" ], [ "16", "3) -폭탄 피하기 초기화 : 공 찾기 대신 폭탄 피하기에 맞게 메시지 설정" ], [ "0", "1) 프로그램 시작" ], [ "6", "1) --폭탄 숨기기" ], [ "2", "1) --공 숨기기" ], [ "8", "1) --폭탄 피하기 결과 출력" ], [ "15", "3) 폭탄 피하기 클래스" ], [ "10", "2) 공 찾기 클래스" ], [ "1", "1) -첫째 공 찾기 게임" ], [ "3", "1) --공 찾기" ], [ "13", "2) -공 찾기" ], [ "14", "2) -공 찾기 결과 출력" ], [ "9", "1) 프로그램 종료" ], [ "5", "1) -둘째 폭탄 피하기 게임" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>공찾기-폭탄피하기</a></li><ul><li><a href='Jg2i1.html'>코드읽기</a></li><li><a href='Jg2i1a.html'>알고리즘</a></li><li><a href='Jg2i1k.html'>키워드</a></li><li><a href='Jg2i1b.html'>빈칸채우기</a></li><li><a href='Jg2i1s.html'>실행순서</a></li><li><a href='Jg2i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/Chapter12/FindGame.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i2.html'>캐릭터 이동(Zoom)</a></li><li><a href='../Jg2i/Jg2i3.html'>지는 가위바위보</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-TV</a></li><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/스레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀호출</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>상자 3개 중 하나에 임의로 공이나 폭탄을 숨기고 그 위치를 맞추는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>3</span></b>
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "0", "프로그램 시작" ], [ "7", "--폭탄 피하기" ], [ "5", "-둘째 폭탄 피하기 게임" ], [ "13", "-공 찾기" ], [ "14", "-공 찾기 결과 출력" ], [ "1", "-첫째 공 찾기 게임" ], [ "12", "-공 숨기기" ], [ "16", "-폭탄 피하기 초기화 : 공 찾기 대신 폭탄 피하기에 맞게 메시지 설정" ], [ "3", "--공 찾기" ], [ "9", "프로그램 종료" ], [ "10", "공 찾기 클래스" ], [ "4", "--공 찾기 결과 출력" ], [ "8", "--폭탄 피하기 결과 출력" ], [ "2", "--공 숨기기" ], [ "6", "--폭탄 숨기기" ], [ "15", "폭탄 피하기 클래스" ], [ "11", "-공 찾기 초기화" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>공찾기-폭탄피하기</a></li><ul><li><a href='Jg2i1.html'>코드읽기</a></li><li><a href='Jg2i1a.html'>알고리즘</a></li><li><a href='Jg2i1k.html'>키워드</a></li><li><a href='Jg2i1b.html'>빈칸채우기</a></li><li><a href='Jg2i1s.html'>실행순서</a></li><li><a href='Jg2i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/Chapter12/FindGame.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i2.html'>캐릭터 이동(Zoom)</a></li><li><a href='../Jg2i/Jg2i3.html'>지는 가위바위보</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-TV</a></li><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/스레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀호출</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>상자 3개 중 하나에 임의로 공이나 폭탄을 숨기고 그 위치를 맞추는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>3</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
                놓쳤다!
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
    O   
-  펑!! 
-</pre><br><pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>1</span></b>
+  펑!! </div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>1</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
  놓쳤다!
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
-               휴우! 
-</pre><br><pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>2</span></b>
+               휴우!</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>2</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
         찾았다! 
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
    O   
-         휴우! 
+         휴우!</div> 
 </pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body>  </html>  
